# russignol

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  README.md
host-utility/: Cargo.toml
host-utility/src/: image.rs  restore_keys.rs
libs/crypto/: Cargo.toml
libs/epd-2in13-v4/: Cargo.toml
libs/signer/: Cargo.toml
libs/signer/examples/: tcp_server_demo.rs
libs/signer/src/: bls.rs  high_watermark.rs  lib.rs  main.rs  server.rs  signing_activity.rs  test_utils.rs
libs/signer/tests/: crash_lock_poison.rs  dos_memory_exhaustion.rs  race_watermark.rs  tcp_integration_test.rs
libs/storage/: Cargo.toml
libs/storage/src/: lib.rs  watermark.rs
libs/ui/: Cargo.toml
rpi-signer/: Cargo.toml
rpi-signer/buildroot-external/board/russignol/: kernel.fragment  linux-russignol_defconfig
rpi-signer/buildroot-external/configs/: russignol_defconfig  russignol_hardened_defconfig
rpi-signer/buildroot-external/patches/linux/: linux.hash
rpi-signer/buildroot-external/rootfs-overlay-dev/etc/init.d/: S20russignol
rpi-signer/buildroot-external/rootfs-overlay-hardened/: init
rpi-signer/src/: app.rs  cpu_freq.rs  events.rs  led.rs  main.rs  pages.rs  signer_server.rs  storage.rs  tezos_signer.rs  watermark_setup.rs
rpi-signer/src/pages/: about.rs  blockchain.rs  confirmation.rs  menu.rs  signatures.rs  status.rs  watermarks.rs
website/: index.html  style.css
xtask/: Cargo.toml
xtask/src/: build.rs  changelog.rs  deploy.rs  image.rs  main.rs  utils.rs
