[package]
name = "russignol-setup"
version = "0.19.1"
edition = "2024"
authors = ["Richard Ayotte"]
description = "Automated setup and validation utility for the russignol hardware signer host"
license = "MIT"

[lints]
workspace = true

[[bin]]
name = "russignol"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
clap = { version = "4.5.60", features = ["derive"] }
clap_complete = "4"
colored = "3.1.1"
dirs = "6.0"
env_logger = "0.11.9"
indicatif = "0.18.4"
inquire = "0.9"
log = "0.4.29"
nix = { version = "0.31.2", features = ["user", "process"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
shellexpand = "3.1"
ureq = "3.2"
semver = "1.0"
sha2 = "0.10"
tempfile = "3.26"
lzma-rs = "0.3"
unicode-width = "0.2"
zeroize = { version = "1.8.2", features = ["derive"] }
russignol-storage = { version = "0.1.0", path = "../libs/storage" }

[dev-dependencies]
