[package]
name = "russignol-signer"
version = "0.20.0-beta.2"
edition = "2024"
authors = ["Richard Ayotte"]
description = "Secure hardware signer for Tezos baking on Raspberry Pi Zero 2W"
license = "MIT"

[lints]
workspace = true

[[bin]]
name = "russignol-signer"
path = "src/main.rs"

[dependencies]
log = "0.4"
env_logger = "0.11"
libc = "0.2"
embedded-graphics = "0.8.2"
crossbeam-channel = "0.5"
epd-2in13-v4 = { path = "../libs/epd-2in13-v4", version = "0.1.0" }
russignol-signer-lib = { path = "../libs/signer", version = "0.6.4" }
russignol-ui = { path = "../libs/ui" }
# Encryption for PIN-protected key storage
russignol-crypto = { path = "../libs/crypto" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tinybmp = "0.7.0"
embedded-layout = "0.4.2"
embedded-text = "0.7.3"
u8g2-fonts = { version = "0.7.2", features = ["embedded_graphics_textstyle"] }
ctrlc = "3.5"
russignol-storage = { version = "0.1.0", path = "../libs/storage" }

[dev-dependencies]
tempfile = "3.26.0"

# Note: [profile.release] settings moved to workspace Cargo.toml
# All optimization settings are now applied workspace-wide
