[package]
name = "xtask"
version = "0.1.1"
edition = "2024"
publish = false

[lints]
workspace = true

[[bin]]
name = "xtask"
path = "src/main.rs"
test = false

[lib]
name = "xtask_lib"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "color"] }
colored = "3.1"
which = "8.0"
sha2 = "0.10"
regex = "1"
chrono = "0.4.44"
