[package]
name = "epd-2in13-v4"
version = "0.1.2"
edition = "2024"
authors = ["Richard Ayotte"]
description = "Driver for Waveshare 2.13\" e-Paper Display V4 with touch support"
license = "MIT"

[lints]
workspace = true

[lib]
test = false
doctest = false

[dependencies]
embedded-hal = "1.0.0"
linux-embedded-hal = "0.4.1"
embedded-graphics = "0.8.2"
log = "0.4.29"
crossbeam-channel = "0.5.15"
thiserror = "2.0"

[dev-dependencies]
chrono = "0.4.44"
env_logger = "0.11.9"
