[package]
name = "russignol-signer-lib"
version = "0.6.4"
edition = "2024"
authors = ["Tezos Contributors"]
description = "High-performance BLS12-381 signer for Tezos, optimized for Raspberry Pi Zero 2W"
license = "MIT"

[lints]
workspace = true

[lib]
name = "russignol_signer_lib"
path = "src/lib.rs"

[[bin]]
name = "russignol-signer-lib"
path = "src/main.rs"
test = false

[features]
default = []
perf-trace = []  # Enable performance tracing
# WARNING: Enables gen_keys() which writes secret keys to disk in plaintext.
# Only for development/CLI tools. Never use in production signers.
insecure-disk-keys = []

[dependencies]
blake2 = "0.10.6"
blake3 = "1.8.3"
blst = { version = "0.3.16", features = ["portable"] }
bs58 = { version = "0.5.1", features = ["check"] }
bson = "3.1.0"
clap = { version = "4.5.60", features = ["derive"] }
directories = "6.0.0"
getrandom = "0.4.2"
hex = "0.4.3"
hmac = "0.12.1"
log = "0.4.29"
num-bigint = "0.4"
russignol-storage = { version = "0.1.0", path = "../storage" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
thiserror = "2.0.18"

# Note: [profile.release] settings moved to workspace Cargo.toml
# Note: overflow-checks = false was intentionally NOT moved to workspace profile
#       to maintain safety in host-utility. RPi signer gets other optimizations.

[dev-dependencies]
criterion = "0.8.2"
tempfile = "3.26.0"
colored = "3.1"
proptest = "1.10"

[[bench]]
name = "signing_benchmark"
harness = false
